@@ -62,7 +62,7 @@ public class PushToVim extends AbstractPushToApplication {
                         LOGGER.warn("Could not read from stderr.", e);
                     }
                     // Error stream has been closed. See if there were any errors:
-                    if (!sb.toString().trim().isEmpty()) {
+                    if (!sb.toString().isBlank()) {
                         LOGGER.warn("Push to Vim error: {}", sb);
                         couldNotPush = true;
                     }
@@ -138,7 +138,7 @@ public class PushToVim extends AbstractPushToApplication {
 
         commandPath = preferences.getCommandPaths().get(this.getDisplayName());
 
-        if ((commandPath == null) || commandPath.trim().isEmpty()) {
+        if ((commandPath == null) || commandPath.isBlank()) {
             notDefined = true;
             return false;
         }
